--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel=icon href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg" viewBox="0 0 100 100"><text text-anchor="middle" x="50" y="0.70em" font-size="110">&infin;</text></svg>'>
         <meta name="dscvr:canvas:version" content="vNext">
         <!-- Open Graph Image for previewing the application -->
-        <meta name="og:image" content="https://your-application.com/preview-image.png">
+        <meta name="og:image" content="https://trippy.work/images/lofibugcover.png">
         <title>LoFi-BUG</title>
 
         <style>
